
The parsing tree was refactored from the ground up to better accommodate commands and subcommands and also the extra use cases that have been popping up ever since autocompletion support was added.

=== Breaking changes

* The HelpCommand signature has changed.
The name of the "help" command is configurable.
+
----
- opt.HelpCommand("")
+ opt.HelpCommand("help", "")
----

* The Dispatch signature has changed.
There is no need to define the name of the help command at this level anymore since it has been moved to the `HelpCommand` declaration.
+
[source,diff]
----
- err = opt.Dispatch(ctx, "help", remaining)
+ err = opt.Dispatch(ctx, remaining)
----

* Move `InterruptContext` into a package level function and not a method of GetOpt.
+
[source,diff]
----
- ctx, cancel, done := opt.InterruptContext()
+ ctx, cancel, done := getoptions.InterruptContext()
----

* `Write` io.Writer used to write warnings and errors (which defaults to os.Stderr) has been made into a package level variable and not a method of GetOpt.

* `CommandFn` is no longer an exported field of `GetOpt`.
If this was ever used, now the canonical way to execute a command function is through `opt.Dispatch`.

* WIP: `opt.SetRequireOrder` might be dropped since now we fully track subcommands.
Need to consider its usefulness when doing wrappers around other programs.


=== New Features

Autocompletion is super useful now.

== v0.24.0: New Features

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== New Features

* Add `SetMaxParallel` method to DAG graph to limit concurrency.

* Add `SetOutputBuffer` method to DAG graph to allow buffering task output in memory and printing it at the end of the task execution for easier debugging.

* Enable completion results after options that require arguments.

=== Fixes

* Fix spelling mistake in package `dag`: `DephFirstSort()` -> `DepthFirstSort()`

== v0.23.0: Feature Updates
